# agents-of-chaos-hackathon

./: .env.example  .gitignore  AGENTS.md  README.md  render.yaml
backend/: bundle_assets.sh  claude.py  config.py  db.py  main.py  prompts_loader.py  pyproject.toml  requirements.txt
backend/tests/: conftest.py  fakes.py  test_phase1_seed_history.py  test_phase2_goal.py  test_phase3_checkin.py
data/: seed_checkins.json
frontend/: app.js  index.html  styles.css
prompts/: checkin_prompt.md  onboarding_prompt.md
